[package]
name = "frontend-metrics-aggregator"
version = "0.1.0"
authors = ["frezc <504021398@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "1.0"
serde = "1.0.99"
serde_json = "1.0"
prometheus = "0.7.0"
futures = "0.1.28"
